--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "@ffmpeg/ffmpeg": "^0.12.15",
-    "@mui/icons-material": "5.11.16",
-    "@mui/material": "5.12.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.0",
     "@mui/styled-engine": "5.12.0",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "5.16.5",
@@ -37,9 +37,11 @@
     "react-dropzone": "^14.3.8",
     "react-flatpickr": "3.10.13",
     "react-google-login": "^5.2.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "15.5.0",
+    "sweetalert2": "^11.21.0",
     "web-vitals": "3.3.1"
   },
   "scripts": {
