--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chroma-js": "2.4.2",
     "dotenv": "^16.5.0",
     "flatpickr": "4.6.13",
+    "framer-motion": "^12.12.1",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
